--- a/requirements.txt
+++ b/requirements.txt
@@ -2,11 +2,14 @@ APScheduler==3.11.0
 certifi==2025.4.26
 charset-normalizer==3.4.2
 idna==3.10
-iniconfig==2.1.0
-packaging==25.0
-pluggy==1.6.0
-pytest==8.3.5
-pytest-mock==3.14.0
-requests==2.32.3
+requests
+ics
+python-vlc
+schedule
+google-api-python-client
+google-auth-httplib2
+google-auth-oauthlib
+msgraph-sdk
+keyring
 tzlocal==5.3.1
 urllib3==2.4.0
