--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,16 +1,53 @@
 name: Build and Release Prayer Player
 
-on:  push:    branches:      - main  pull_request:
+on:
+  push:
+    branches:
+      - main
+  pull_request:
+    branches:
+      - main
 
-jobs:  build:    runs-on: ${{ matrix.os }}    strategy:      matrix:        os: [ubuntu-latest, windows-latest, macos-latest]
+jobs:
+  build:
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [ubuntu-latest, windows-latest, macos-latest]
 
-    steps:    - name: Check out code      uses: actions/checkout@v3
+    steps:
+    - name: Check out code
+      uses: actions/checkout@v3
 
-    - name: Set up Python      uses: actions/setup-python@v4      with:        python-version: '3.10'
+    - name: Set up Python
+      uses: actions/setup-python@v4
+      with:
+        python-version: '3.10'
 
-    - name: Install dependencies      run: |        python -m pip install --upgrade pip        pip install -r requirements.txt        pip install -r requirements-dev.txt
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt
+        pip install -r requirements-dev.txt
 
-    - name: Build the application      run: |        # Determine the path separator for PyInstaller's --add-data flag        SEPARATOR=':'        if [ "${{ runner.os }}" = "Windows" ]; then          SEPARATOR=';'        fi                # Build the application using PyInstaller        pyinstaller --noconfirm --onefile --windowed           --name "PrayerPlayer"           --icon "src/prayer/assets/mosque.png"           --add-data "src/prayer/assets${SEPARATOR}prayer/assets"           --add-data "src/prayer/config${SEPARATOR}prayer/config"           src/prayer/__main__.py
+    - name: Build the application
+      run: |
+        # Determine the path separator for PyInstaller's --add-data flag
+        SEPARATOR=':'
+        if [ "${{ runner.os }}" = "Windows" ]; then
+          SEPARATOR=';'
+        fi
+        
+        # Build the application using PyInstaller
+        pyinstaller --noconfirm --onefile --windowed \
+          --name "PrayerPlayer" \
+          --icon "src/prayer/assets/mosque.png" \
+          --add-data "src/prayer/assets${SEPARATOR}prayer/assets" \
+          --add-data "src/prayer/config${SEPARATOR}prayer/config" \
+          src/prayer/__main__.py
 
-    - name: Upload Artifact      uses: actions/upload-artifact@v3      with:        name: prayer-player-${{ matrix.os }}        path: dist/*
-
+    - name: Upload Artifact
+      uses: actions/upload-artifact@v3
+      with:
+        name: prayer-player-${{ matrix.os }}
+        path: dist/*
