--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,9 +24,12 @@ jobs:
       with:
         python-version: '3.10'
 
+    - name: Install and upgrade build tools
+      run: |
+        python -m pip install --upgrade pip setuptools wheel
+
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip
         pip install -r requirements.txt
         pip install -r requirements-dev.txt
 
