Fix: Update artifact upload path for Windows installer in build workflow

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -131,4 +131,4 @@ jobs:
         path: |
           dist/*.dmg
           dist/*.deb
-          dist/output/PrayerPlayer-Setup.exe
+          deployment/windows/Output/*.exe
