Refactor ServiceManager to improve service management across platforms
- Updated the `disable` method to uninstall services instead of just disabling them for Linux, macOS, and Windows.
- Added `is_enabled` method to check if services are enabled based on their respective configurations.
- Simplified the uninstall process for Linux and Windows by removing unnecessary steps.
- Removed the `windows_service.py` file as its functionality is now integrated into the `ServiceManager`.
- Changed the scheduler from a blocking to a background scheduler to allow for non-blocking operation.
- Introduced a new `StateManager` class to manage application state in a thread-safe manner.
- Added a system tray icon with dynamic updates based on application state.
- Implemented a singleton pattern for the `PrayerScheduler` to ensure a single instance is used throughout the application.
- Enhanced error handling and logging in the scheduler refresh process.
- Updated unit tests to reflect changes in the scheduler's implementation and ensure proper functionality.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -48,6 +48,8 @@ jobs:
           --hidden-import "prayer.config" \
           --hidden-import "prayer.platform" \
           --hidden-import "prayer.gui" \
+          --hidden-import "prayer.state" \
+          --hidden-import "prayer.tray_icon" \
           src/prayer/__main__.py
 
     - name: Install Inno Setup
@@ -73,6 +75,8 @@ jobs:
           --hidden-import "prayer.config" \
           --hidden-import "prayer.platform" \
           --hidden-import "prayer.gui" \
+          --hidden-import "prayer.state" \
+          --hidden-import "prayer.tray_icon" \
           src/prayer/__main__.py
 
         # Create the Debian package structure
@@ -119,6 +123,8 @@ jobs:
           --hidden-import "prayer.config" \
           --hidden-import "prayer.platform" \
           --hidden-import "prayer.gui" \
+          --hidden-import "prayer.state" \
+          --hidden-import "prayer.tray_icon" \
           src/prayer/__main__.py
 
         # Install create-dmg
