--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -105,8 +105,7 @@ jobs:
         cp src/prayer/assets/mosque.png prayer-player-deb/usr/share/icons/hicolor/256x256/apps/prayer-player.png
 
         # Build the Debian package
-        dpkg-deb --build prayer-player-deb
-        mv prayer-player-deb.deb dist/prayer-player-1.0.0-amd64.deb
+        dpkg-deb --build prayer-player-deb dist/prayer-player-1.0.0-amd64.deb
 
     - name: Build and package the macOS application
       if: matrix.os == 'macos-latest'
