--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,5 +1,7 @@
+# A unique name for the workflow.
 name: Build and Release Prayer Player
 
+# Triggers the workflow on push or pull request events for the main branch.
 on:
   push:
     branches:
@@ -10,39 +12,49 @@ on:
 
 jobs:
   build:
+    # This job runs on a matrix of operating systems to build for each platform.
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
         os: [ ubuntu-22.04, windows-latest, macos-latest ]
 
     steps:
+    # Step 1: Check out the repository code.
     - name: Check out code
       uses: actions/checkout@v3
 
+    # Step 2: Set up the specified Python version.
     - name: Set up Python
       uses: actions/setup-python@v4
       with:
         python-version: '3.10'
 
-    - name: Install and upgrade build tools
-      run: |
-        python -m pip install --upgrade pip setuptools wheel
-
+    # Step 3: Install all required Python dependencies from requirements files.
     - name: Install dependencies
       run: |
+        python -m pip install --upgrade pip setuptools wheel
         pip install -r requirements.txt
         pip install -r requirements-dev.txt
 
-    - name: Build the Windows application
-      if: matrix.os == 'windows-latest'
+    # Step 4: Build the application executable using PyInstaller.
+    # This step runs for all operating systems, but the path separator for --add-data
+    # is different between Windows (;) and Unix-based systems (:).
+    - name: Build application executable
       shell: bash
       run: |
-        # Build the application using PyInstaller
+        # Use a semicolon as a path separator for Windows.
+        if [[ "${{ runner.os }}" == "Windows" ]]; then
+          SEPARATOR=";"
+        # Use a colon for macOS and Linux.
+        else
+          SEPARATOR=":"
+        fi
+
         pyinstaller --noconfirm --onefile --windowed \
           --name "PrayerPlayer" \
           --icon "src/prayer/assets/mosque.png" \
-          --add-data "src/prayer/assets;prayer/assets" \
-          --add-data "src/prayer/config;prayer/config" \
+          --add-data "src/prayer/assets${SEPARATOR}prayer/assets" \
+          --add-data "src/prayer/config${SEPARATOR}prayer/config" \
           --hidden-import "prayer.auth" \
           --hidden-import "prayer.calendar_api" \
           --hidden-import "prayer.config" \
@@ -52,7 +64,8 @@ jobs:
           --hidden-import "prayer.tray_icon" \
           src/prayer/__main__.py
 
-    - name: Install Inno Setup
+    # --- Windows-Specific Steps ---
+    - name: Install Inno Setup for Windows installer
       if: matrix.os == 'windows-latest'
       run: choco install innosetup --no-progress
 
@@ -60,85 +73,69 @@ jobs:
       if: matrix.os == 'windows-latest'
       run: iscc "deployment\windows\setup.iss"
 
-    - name: Build and package the Ubuntu application
+    # --- Ubuntu-Specific Steps ---
+    - name: Build and package Ubuntu .deb file
       if: matrix.os == 'ubuntu-22.04'
       shell: bash
       run: |
-        # Build the application using PyInstaller
-        pyinstaller --noconfirm --onefile --windowed \
-          --name "PrayerPlayer" \
-          --icon "src/prayer/assets/mosque.png" \
-          --add-data "src/prayer/assets:prayer/assets" \
-          --add-data "src/prayer/config:prayer/config" \
-          --hidden-import "prayer.auth" \
-          --hidden-import "prayer.calendar_api" \
-          --hidden-import "prayer.config" \
-          --hidden-import "prayer.platform" \
-          --hidden-import "prayer.gui" \
-          --hidden-import "prayer.state" \
-          --hidden-import "prayer.tray_icon" \
-          src/prayer/__main__.py
+        # Exit immediately if a command fails.
+        set -e
+
+        # Define package details
+        DEB_DIR="prayer-player-deb"
+        VERSION="1.0.0"
 
         # Create the Debian package structure
-        mkdir -p prayer-player-deb/DEBIAN
-        mkdir -p prayer-player-deb/usr/local/bin
-        mkdir -p prayer-player-deb/usr/share/applications
-        mkdir -p prayer-player-deb/usr/share/icons/hicolor/256x256/apps
+        mkdir -p "${DEB_DIR}/DEBIAN"
+        mkdir -p "${DEB_DIR}/usr/local/bin"
+        mkdir -p "${DEB_DIR}/usr/share/applications"
+        mkdir -p "${DEB_DIR}/usr/share/icons/hicolor/256x256/apps"
 
-        # Create the control file
-        echo "Package: prayer-player" > prayer-player-deb/DEBIAN/control
-        echo "Version: 1.0.0" >> prayer-player-deb/DEBIAN/control
-        echo "Architecture: amd64" >> prayer-player-deb/DEBIAN/control
-        echo "Maintainer: Omar <dev@omar.com>" >> prayer-player-deb/DEBIAN/control
-        echo "Description: Prayer times application that plays the Adhan." >> prayer-player-deb/DEBIAN/control
+        # Create the control file using a heredoc for readability.
+        cat <<EOF > "${DEB_DIR}/DEBIAN/control"
+        Package: prayer-player
+        Version: ${VERSION}
+        Architecture: amd64
+        Maintainer: Omar <dev@omar.com>
+        Description: Prayer times application that plays the Adhan.
+        EOF
 
-        # Create the desktop entry
-        echo "[Desktop Entry]" > prayer-player-deb/usr/share/applications/prayer-player.desktop
-        echo "Name=Prayer Player" >> prayer-player-deb/usr/share/applications/prayer-player.desktop
-        echo "Exec=/usr/local/bin/PrayerPlayer" >> prayer-player-deb/usr/share/applications/prayer-player.desktop
-        echo "Icon=prayer-player" >> prayer-player-deb/usr/share/applications/prayer-player.desktop
-        echo "Type=Application" >> prayer-player-deb/usr/share/applications/prayer-player.desktop
-        echo "Categories=Utility;" >> prayer-player-deb/usr/share/applications/prayer-player.desktop
+        # Create the desktop entry file using a heredoc.
+        cat <<EOF > "${DEB_DIR}/usr/share/applications/prayer-player.desktop"
+        [Desktop Entry]
+        Name=Prayer Player
+        Exec=bash -c "/usr/local/bin/PrayerPlayer"
+        Icon=prayer-player
+        Type=Application
+        Categories=Utility;
+        EOF
 
-        # Copy the application files
-        cp dist/PrayerPlayer prayer-player-deb/usr/local/bin/
-        cp src/prayer/assets/mosque.png prayer-player-deb/usr/share/icons/hicolor/256x256/apps/prayer-player.png
+        # Copy the application executable and icon into the package structure.
+        cp dist/PrayerPlayer "${DEB_DIR}/usr/local/bin/"
+        cp src/prayer/assets/mosque.png "${DEB_DIR}/usr/share/icons/hicolor/256x256/apps/prayer-player.png"
 
-        # Build the Debian package
-        set -x
-        chmod -R 755 prayer-player-deb
-        ls -l prayer-player-deb/
-        ls -l prayer-player-deb/usr/local/bin/
-        dpkg-deb --build prayer-player-deb
-        echo "dpkg-deb exit code: $?"
-        ls -l
-        mv prayer-player-deb.deb dist/prayer-player-1.0.0-amd64.deb
+        # Set correct permissions for the package directory.
+        chmod -R 755 "${DEB_DIR}"
+
+        # Build the final .deb package.
+        dpkg-deb --build "${DEB_DIR}"
+
+        # Move the created package to the dist folder for upload.
+        mv "${DEB_DIR}.deb" "dist/prayer-player-${VERSION}-amd64.deb"
+
+        # List the content of the dist folder to verify.
+        echo "--- Final .deb artifact ---"
         ls -l dist/
-        set +x
 
-    - name: Build and package the macOS application
+    # --- macOS-Specific Steps ---
+    - name: Build and package macOS .dmg file
       if: matrix.os == 'macos-latest'
       shell: bash
       run: |
-        # Build the .app bundle
-        pyinstaller --noconfirm --windowed \
-          --name "PrayerPlayer" \
-          --icon "src/prayer/assets/mosque.png" \
-          --add-data "src/prayer/assets:prayer/assets" \
-          --add-data "src/prayer/config:prayer/config" \
-          --hidden-import "prayer.auth" \
-          --hidden-import "prayer.calendar_api" \
-          --hidden-import "prayer.config" \
-          --hidden-import "prayer.platform" \
-          --hidden-import "prayer.gui" \
-          --hidden-import "prayer.state" \
-          --hidden-import "prayer.tray_icon" \
-          src/prayer/__main__.py
-
-        # Install create-dmg
+        # Install create-dmg tool using Homebrew.
         brew install create-dmg
 
-        # Create the DMG
+        # Create the final .dmg installer.
         create-dmg \
           --volname "PrayerPlayer Installer" \
           --window-pos 200 120 \
@@ -150,6 +147,7 @@ jobs:
           "dist/PrayerPlayer.dmg" \
           "dist/PrayerPlayer.app"
 
+    # --- Artifact Upload Steps ---
     - name: Upload Windows Artifact
       if: matrix.os == 'windows-latest'
       uses: actions/upload-artifact@v4
