Fix: Add appdirs dependency and update configuration paths for user-specific data storage

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -62,6 +62,7 @@ jobs:
           --hidden-import "prayer.gui" \
           --hidden-import "prayer.state" \
           --hidden-import "prayer.tray_icon" \
+          --hidden-import "json" \
           src/prayer/__main__.py
 
     # NEW STEP: Test application startup (dry run)
