Fix: Include missing modules in PyInstaller build
Explicitly added 'json', 'argcomplete', 'zoneinfo', and 'appdirs' as hidden imports
to the PyInstaller build command in the GitHub Actions workflow. This resolves
ModuleNotFoundError issues when running the bundled application.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -63,6 +63,9 @@ jobs:
           --hidden-import "prayer.state" \
           --hidden-import "prayer.tray_icon" \
           --hidden-import "json" \
+          --hidden-import "argcomplete" \
+          --hidden-import "zoneinfo" \
+          --hidden-import "appdirs" \
           src/prayer/__main__.py
 
     # NEW STEP: Test application startup (dry run)
