--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,6 +30,11 @@ jobs:
         python-version: '3.10'
 
     # Step 3: Install all required Python dependencies from requirements files.
+    - name: Install Linux GUI dependencies
+      if: matrix.os == 'ubuntu-22.04'
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y libegl1
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip setuptools wheel
