feat: Complete architectural refactor for testability and DI
This commit marks the completion of a major architectural refactoring focused on improving testability, modularity, and robustness.

Key changes include:

- **Model-View-Presenter (MVP):**
  - Decoupled business logic from the UI by refactoring the `focus_steps` module into a `FocusStepsView` and a `FocusStepsPresenter`.
  - Created pure Python unit tests for the presenter, eliminating Qt dependencies in core logic testing.

- **Dependency Injection (DI):**
  - Refactored `PrayerScheduler` to receive its dependencies (e.g., `ActionExecutor`, `CalendarService`) via its constructor.
  - Introduced an `ActionExecutor` protocol to abstract side effects like audio playback and GUI updates, with `DefaultActionExecutor` and `DryRunActionExecutor` implementations.
  - Established a central "Composition Root" in `src/__main__.py` to instantiate and connect all major application components.

- **Configuration Management:**
  - Integrated `pydantic` to define a clear, validated configuration schema (`src/config/schema.py`).
  - Refactored `load_config` and `save_config` to be safer and more robust, consistently using the `Config` object throughout the application.

- **Error Handling & Concurrency:**
  - Implemented a global exception handler in `src/__main__.py` to gracefully catch and log all uncaught exceptions.
  - Introduced a custom `CalendarSyncError` for more precise error handling.
  - Clarified the threading model by adding documentation to `qt_utils.py` and ensuring all GUI updates are safely executed on the main Qt thread using the `@run_in_qt_thread` decorator.
  - Resolved a race condition in the scheduler that caused the 'No upcoming prayers' bug.

- **Bug Fixes & CI:**
  - Fixed various bugs identified during the refactoring process.
  - Updated and created new tests to ensure correctness and prevent regressions. All tests are now passing.

--- a/requirements.txt
+++ b/requirements.txt
@@ -14,8 +14,6 @@ tzlocal==5.3.1
 urllib3==2.4.0
 argcomplete==3.3.0
 PySide6
-playsound==1.2.2
-pytest
-Pillow
-appdirs
-pydubsimpleaudio
+pydantic
+pydub
+simpleaudio
