fix: Resolve PyInstaller bundling and Google Auth issues on Linux
This commit addresses multiple issues related to PyInstaller bundling on Linux and the handling of Google API credentials, ensuring the application builds and runs correctly.

Key fixes include:
- **Resolved Segmentation Fault:** Explicitly added  and  to the PyInstaller command in . This ensures that essential Qt platform plugins are correctly bundled, preventing runtime crashes (Aborted core dumped) on Linux.
- **Corrected Google Credentials Bundling:** Reverted the previous change that removed  from the source.  is now correctly placed in  and explicitly added to PyInstaller's  in .
- **Robust Credentials Access:** Modified  to use  for accessing the bundled , ensuring reliable discovery within the PyInstaller environment.
- **Improved User Experience for Authentication:** Updated the  message to reflect the correct OAuth flow, where the application handles the authentication process via the user's browser.
- **Enhanced Build Script Cleanup:** Added  to the cleanup list in  for more thorough build environment preparation.
- **Updated GitHub Actions Workflow:** Included  in the  step for Ubuntu builds in  to ensure CI/CD environments have the necessary Qt dependencies.

These comprehensive changes ensure the application is correctly packaged, stable, and provides a seamless Google Calendar authentication experience for users on Linux.

--- a/deployment/prayer-player.plist
+++ b/deployment/prayer-player.plist
@@ -7,9 +7,7 @@
 
     <key>ProgramArguments</key>
     <array>
-        <string>/usr/bin/env</string>
-        <string>python3</string>
-        <string>/path/to/your/prayer/src/prayer/__main__.py</string>
+        <string>/Applications/PrayerPlayer.app/Contents/MacOS/PrayerPlayer</string>
         <!-- Add any arguments your script needs here, e.g., --city "London" -->
         <!-- <string>--city</string> -->
         <!-- <string>YourCity</string> -->
@@ -33,9 +31,7 @@
     <key>StandardErrorPath</key>
     <string>/tmp/com.prayerplayer.scheduler.stderr.log</string>
 
-    <!-- WorkingDirectory: Set the working directory for the script -->
-    <key>WorkingDirectory</key>
-    <string>/path/to/your/prayer</string>
+    
 
     <!-- EnvironmentVariables: Set environment variables for the script -->
     <!-- <key>EnvironmentVariables> -->
