--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,7 +34,7 @@ jobs:
       if: matrix.os == 'ubuntu-22.04'
       run: |
         sudo apt-get update
-        sudo apt-get install -y libegl1 libpulse0
+        sudo apt-get install -y libegl1 libpulse0 libxcb-cursor0
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip setuptools wheel
@@ -108,7 +108,7 @@ jobs:
 
         # Copy the application executable and icon into the package structure.
         cp dist/PrayerPlayer "${DEB_DIR}/usr/local/bin/"
-        cp src/prayer/assets/mosque.png "${DEB_DIR}/usr/share/icons/hicolor/256x256/apps/prayer-player.png"
+        cp src/assets/mosque.png "${DEB_DIR}/usr/share/icons/hicolor/256x256/apps/prayer-player.png"
 
         # Set correct permissions for the package directory.
         chmod -R 755 "${DEB_DIR}"
