fix: Resolve PyInstaller bundling and Google Auth issues on Linux
This commit addresses multiple issues related to PyInstaller bundling on Linux and the handling of Google API credentials, ensuring the application builds and runs correctly.

Key fixes include:
- **Resolved Segmentation Fault:** Explicitly added  and  to the PyInstaller command in . This ensures that essential Qt platform plugins are correctly bundled, preventing runtime crashes (Aborted core dumped) on Linux.
- **Corrected Google Credentials Bundling:** Reverted the previous change that removed  from the source.  is now correctly placed in  and explicitly added to PyInstaller's  in .
- **Robust Credentials Access:** Modified  to use  for accessing the bundled , ensuring reliable discovery within the PyInstaller environment.
- **Improved User Experience for Authentication:** Updated the  message to reflect the correct OAuth flow, where the application handles the authentication process via the user's browser.
- **Enhanced Build Script Cleanup:** Added  to the cleanup list in  for more thorough build environment preparation.
- **Updated GitHub Actions Workflow:** Included  in the  step for Ubuntu builds in  to ensure CI/CD environments have the necessary Qt dependencies.

These comprehensive changes ensure the application is correctly packaged, stable, and provides a seamless Google Calendar authentication experience for users on Linux.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -45,7 +45,7 @@ jobs:
     # This step runs for all operating systems, but the path separator for --add-data
     # is different between Windows (;) and Unix-based systems (:).
     - name: Build application executable
-      run: pyinstaller --noconfirm PrayerPlayer.spec
+      run: pyinstaller --noconfirm --collect-all PySide6 --collect-submodules PySide6.Qt.plugins.platforms --collect-submodules PySide6.Qt.plugins.xcbglintegrations PrayerPlayer.spec
 
     # NEW STEP: Test application startup (dry run)
     - name: Test application startup (dry run)
@@ -102,7 +102,7 @@ jobs:
         Name=Prayer Player
         Exec=bash -c "/usr/local/bin/PrayerPlayer"
         Icon=prayer-player
-        Type=Application
+        Type=Application;
         Categories=Utility;
         EOF
 
@@ -142,6 +142,13 @@ jobs:
           --app-drop-link 600 185 \
           "dist/PrayerPlayer.dmg" \
           "dist/PrayerPlayer.app"
+
+    - name: Test macOS application startup (dry run)
+      if: matrix.os == 'macos-latest'
+      shell: bash
+      run: |
+        echo "Running startup test for macOS"
+        ./dist/PrayerPlayer.app/Contents/MacOS/PrayerPlayer --dry-run
 
     # --- Artifact Upload Steps ---
     - name: Upload Windows Artifact
