--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,7 +34,7 @@ jobs:
       if: matrix.os == 'ubuntu-22.04'
       run: |
         sudo apt-get update
-        sudo apt-get install -y libegl1 libpulse0 libxcb-cursor0
+        sudo apt-get install -y libegl1 libpulse0 libxcb-cursor0 libasound2-dev
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip setuptools wheel
