--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -40,6 +40,11 @@ jobs:
     - name: Build application executable
       run: pyinstaller --noconfirm PrayerPlayer.spec
 
+    - name: Set up token for dry run
+      run: |
+        mkdir -p "$env:APPDATA\PrayerPlayer"
+        echo "${{ secrets.TOKEN }}" | Out-File -FilePath "$env:APPDATA\PrayerPlayer\token.json" -Encoding utf8
+
     # Step 5: Test application startup (dry run)
     - name: Test application startup (dry run)
       shell: bash
@@ -47,7 +52,7 @@ jobs:
         echo "Listing contents of dist directory:"
         ls -R dist
         echo "Running startup test for Windows"
-        ./dist/PrayerPlayer.exe --dry-run
+        ./dist/PrayerPlayer.exe --dry-run --country US --city "New York"
 
     # Step 6: Install Inno Setup for Windows installer
     - name: Install Inno Setup for Windows installer
