fix(ci): Correct dry run city/country argument parsing
- Ensure CLI arguments for city and country correctly override loaded configuration in dry run mode.
- Remove default values for --city and --country in argument parsing to allow proper override.
- Add google_client_config.json to .gitignore to prevent accidental commits of secrets.

--- a/.gitignore
+++ b/.gitignore
@@ -11,4 +11,5 @@ myenv
 config.json
 .config.json
 prayer-player-deb/
-credential.jsonsrc/config/security/google_client_config.json
+credential.json 
+src/config/security/google_client_config.json
